--- a/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
+++ b/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
-    tools:context=".ThayDoiThongTin">
+    tools:context=".packageThongTinUser.ThayDoiThongTin">
 
     <ImageView
         android:id="@+id/imgHinhDaiDien2"
@@ -22,7 +22,7 @@
         android:layout_width="65dp"
         android:layout_height="51dp"
         android:layout_marginTop="32dp"
-        android:text="Đổi ảnh"
+        android:text="Đổi"
         android:background="@drawable/custom_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgHinhDaiDien2"
@@ -139,5 +139,19 @@
         app:layout_constraintEnd_toStartOf="@+id/spinnerXaPhuong"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="32dp"
+        android:ems="10"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerThanhPho"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSDT" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
