--- a/app/src/main/res/layout/thongtin.xml
+++ b/app/src/main/res/layout/thongtin.xml
@@ -124,11 +124,12 @@
                     app:layout_constraintTop_toBottomOf="@+id/txtTenPhim" />
 
                 <Button
-                    android:id="@+id/btnMuaVe"
+                    android:id="@+id/btnDatVe"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:backgroundTint="#FF0000"
+
                     android:text="Mua vé ngay"
                     android:textColor="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
